tabrow fix overlap nav

--- a/styles/watchlist.css
+++ b/styles/watchlist.css
@@ -10,7 +10,7 @@
     position: absolute;
     background: transparent;
     display: flex;
-    width: 100vw;
+    width: fit-content;
     height: 13.5vh;
     align-items: center;
     justify-content: center;
